--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,8 +28,8 @@ body {
   left: 16px;
   min-width: 12px;
   height: 12px;
-  background: #181818;
-  color: #fff;
+  background: $color-black;
+  color: $color-white;
   border-radius: 50%;
   font-size: 0.5rem;
   font-weight: 700;
@@ -38,7 +38,7 @@ body {
   text-align: center;
   line-height: 1;
   z-index: 2;
-  border: 2px solid #fff;
+  border: 2px solid $color-white;
   box-shadow: 0 2px 8px #0002;
   pointer-events: none;
   transition: opacity 0.18s;
@@ -138,7 +138,7 @@ body {
     top: 110%;
     left: 50%;
     transform: translateX(-50%);
-    background: #fff;
+    background: $color-white;
     border-radius: 12px;
     border: 1px solid $color-gray-light;
     box-shadow: 0 2px 16px #0002;
@@ -151,7 +151,7 @@ body {
     font-family: $font-main;
     font-size: 0.75rem;
     font-weight: 600;
-    color: #181818;
+    color: $color-black;
     margin-bottom: 16px;
     line-height: 1.20;
     text-align: start;
@@ -159,7 +159,7 @@ body {
 .atendimento-btn {
     width: 10.5rem;
     background: $color-green;
-    color: #181818;
+    color: $color-black;
     font-family: $font-main;
     font-size: 1rem;
     font-weight: 900;
@@ -192,7 +192,7 @@ body {
     top: 110%;
     left: 50%;
     transform: translateX(-50%);
-    background: #fff;
+    background: $color-white;
     border-radius: 12px;
     border: 1px solid $color-gray-light;
     box-shadow: 0 2px 16px #0002;
@@ -215,7 +215,7 @@ body {
 }
 .login-btn--main {
     background: $color-green;
-    color: #181818;
+    color: $color-black;
     margin-bottom: 12px;
     &:hover {
         background: darken($color-green, 7%);
@@ -223,13 +223,12 @@ body {
 }
 .login-dropdown__or {
     font-size: 0.75rem;
-    color: #222;
     margin-bottom: 12px;
     font-weight: 500;
 }
 .login-btn--register {
-    background: #181818;
-    color: #fff;
+    background: $color-black;
+    color: $color-white;
     margin-bottom: 0;
     &:hover {
         background: #222;
@@ -286,7 +285,7 @@ body {
   max-width: 1240px;
   margin: 0 auto 72px auto;
   padding: 0 16px;
-  background: #f1f1f1;
+  background: $color-bg;
   border-radius: 0 0 18px 18px;
 }
 
@@ -362,7 +361,7 @@ body {
 }
 
 .footer__strip {
-  background: #111;
+  background: $color-black;
   height: 120px;
   display: flex;
   align-items: center;
@@ -388,7 +387,7 @@ body {
 }
 
 .footer__text {
-  color: #fff;
+  color: $color-white;
   font-size: 0.75rem;
   font-weight: 300;
   line-height: 1.5;
@@ -460,7 +459,6 @@ body {
   font-size: 1.875rem;
   font-weight: 800;
   margin-bottom: 40px;
-  color: #181818;
   font-family: $font-main;
   margin-left: 8px;
 }
@@ -477,7 +475,7 @@ body {
   display: flex !important;
   align-items: center;
   justify-content: center;
-  background: #000 !important;
+  background: $color-black !important;
   border-radius: 5px !important;
   border: none !important;
   width: 35px !important;
@@ -524,7 +522,7 @@ body {
 }
 
 .product-card {
-  background: #fff;
+  background: $color-white;
   border-radius: 8px;
   box-shadow: 0 1.5px 8px #0001;
   padding: 22px 16px 28px 16px;
@@ -547,7 +545,6 @@ body {
     height: auto;
     max-width: 100%;
     max-height: 220px;
-    background: #ededed;
 }
 
   .product-info {
@@ -557,7 +554,6 @@ body {
       font-size: 0.75rem;
       font-weight: 500;
       margin-bottom: 12px;
-      color: #181818;
       min-height: 44px;
       display: flex;
       padding: 8px;
@@ -568,7 +564,7 @@ body {
 
     .product-old-price {
       font-size: 0.75rem;
-      color: #A7A7A7;
+      color: $color-gray;
       text-decoration: line-through;
       margin-bottom: 1px;
       font-weight: 400;
@@ -583,7 +579,7 @@ body {
 
     .product-installment {
       font-size: 0.75rem;
-      color: #707070;
+      color: $color-gray;
       margin-bottom: 13px;
 }
 
@@ -629,7 +625,7 @@ body {
 }
 
   .modal-content {
-    background: #fff;
+    background: $color-bg;
     border-radius: 22px;
     padding: 38px 48px;
     min-width: 14rem;
@@ -638,7 +634,6 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 0.75rem;
-    color: #181818;
     font-family: $font-main;
     box-shadow: 0 8px 32px #0003;
     font-weight: 600;
